# cram-backend

./: .env.example  API.md  README.md  pyproject.toml  spec.md
config/: settings.py  urls.py
main/: admin.py  models.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_remove_situation_languages.py  0003_situation_target_languages.py  0004_remove_communication_descriptions_and_more.py
